# rs-clips

./: Cargo.toml  default.nix  flake.nix  result  shell.nix
app/: Cargo.toml
app/src/: capture.rs  config.rs  constants.rs  failed_uploads.rs  ffmpeg.rs  lib.rs  main.rs  overlay.rs  process.rs  progress.rs  settings.rs  upload.rs
overlay/: Cargo.toml
overlay/src/: capture_view.rs  main.rs  picker_view.rs  progress_view.rs  trimmer_view.rs
