[package]
name = "clips-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "time",
    "macros",
] }
walkdir = "2"
nix = { version = "0.27", default-features = false, features = [
    "process",
    "signal",
] }
libc = "0.2"
evdev = "0.12"
